update: copy to privacy

--- a/privacy.html
+++ b/privacy.html
@@ -125,6 +125,61 @@
                     </p>
                   </div>
               </div>
+              <div class="row">
+                  <div class="column _25">
+                    <p class="title small-caps">
+                      What is Personal Information Do We Collect?
+                    </p>
+                  </div>
+                  <div class="column _75">
+                    <p>
+                      We collect and maintain different types of personal information in respect of the individuals with whom we interact. This may include, for example, your: contact and identification information, such as your name, address, telephone number and e-mail address; medical documents, which includes: (i) your healthcare practitioner’s name, profession, business address, telephone, fax, email address, province of registration and registration number; (ii) your name, and date of birth; and (iii) dosage information (daily quantity and period of use); medical release form, which is required in order for us to verify the information in your medical document with the healthcare practitioner; and
+                      payment information (including, if applicable, insurance information). We may also collect market-related information, which may include personal information, concerning market trends and activities impacting our business. This information may include contract terms, financial information and other information for the purpose of market analysis and strategic planning.
+                    </p>
+                    <p>
+                      Robinsons, a licensed producer pursuant to the Cannabis Act, markets and sells cannabis and cannabis accessories, as well as other non-cannabis products. As such, Robinsons may also collect personal information from individuals participating in and/or impacted by these activities.
+                    </p>
+                    <p>
+                      For example, your personal information will be collected in order to establish your record. Types of information we collect include (but is not limited to), prescription information (e.g. patient, medication and prescriber information), health information (e.g. allergies and medical conditions) and insurance information. Upon request, Robinsons will provide you with information on why your personal information is required and to whom they must disclose it in order to provide you with the Robinsons services.
+                    </p>
+                    <p>
+                      As a general rule, Robinsons collects personal information directly from you. In most circumstances where the personal information that we collect about you is held by a third party, we will obtain your permission before we seek out this information from such sources (such permission may be given directly by you or implied from your actions).
+                    </p>
+                    <p>
+                      From time to time, we may utilize the services of third parties and may also receive personal information collected by those third parties in the course of the performance of their services for us or otherwise. Where this is the case, we will take reasonable steps to ensure that such third parties have represented to us that they have the right to disclose your personal information to us.
+                    </p>
+                    <p>
+                      Where permitted or required by applicable law or regulatory requirements, we may collect information about you without your knowledge or consent.
+                    </p>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="column _25">
+                    <p class="title small-caps">
+                      Our Website
+                    </p>
+                  </div>
+                  <div class="column _75">
+                    <p>
+                      We may collect information related to your visit to our website, including the IP address and domain used to access our website, the type and version of your browser, the website you came from to access our website, the page you entered and exited at, any website page within our website that is viewed by that IP address and the country in which you are located. We may use this information to monitor our website's performance (such as number of visits, average time spent, page views) and for our other business purposes, such as: (i) customizing certain content that we think you might like based on your usage patterns; (ii) improving our products and services; and (iii) upgrading our website.
+                    </p>
+                    <p>
+                      In connection with the foregoing, we may place a “cookie” on the hard drive of your computer to track your visit. The cookie acts as an identification card and allows our website to identify you and to record your passwords and preferences. The cookie allows us to track your visit to our website so that we can understand your use of our website and tailor our website to better meet your needs. Most web browsers are set to accept cookies. However, on most web browsers you may change this setting to have your web browser either: (i) notify you prior to a website placing a cookie on your hard drive so that you can decide whether or not to accept the cookie; or (ii) automatically prevent the placing of a cookie on your hard drive.
+                    </p>
+                    <p>
+                      In addition, we collect the personal information that you submit to our website, such as your name, address and any other contact or other information that you choose to provide by: applying for a position with Robinsons through our website; or corresponding with a representative of Robinsons via e-mail using the hyperlinks created for that purpose.
+                      Our website may contain links to other websites that may be subject to less stringent privacy standards. If you click on a link to such a third party website, a third party may also place a cookie on your hard drive. We cannot assume any responsibility for the privacy practices, policies or actions of the third parties that operate these websites. Robinsons is not responsible for how such third parties collect, use or disclose your personal information. You should review the privacy policies of these websites before providing them with personal information.
+                    </p>
+                    <p>
+                      Finally, we use third party service providers (and their analytics tools) to help us measure traffic and usage trends for our website. These tools may use cookies and other technologies to collect information about your use of our website, and collect information sent by your device or our website. This information may be used to, among other things, analyze and track data, determine the popularity of certain content, better understand your online activity, and assists us in improving our website.
+                    </p>
+                    <p>
+                      For example, we may use Google’s Universal Analytics to better understand who is using our website and how people are using it. Google may use cookies, pixel tags and other technologies to collect and store information such as website pages visited, places where users click, time spent on each website page, IP address, type of operating system used, location-based data, device ID, search history, and phone number. We use this information to improve our website and as otherwise described in this Privacy Policy. Please see
+                      http://www.google.com/policies/privacy/partners/ for information about how Google Analytics uses this information, visit https://tools.google.com/dlpage/gaoptout for information about the Google Analytics Opt-out Browser Add-on, and visit 
+                      http://www.google.com/settings/ads to adjust the settings for your Google account.
+                    </p>
+                  </div>
+              </div>
             </section>
 
           </main>
