commit before revert

--- a/index.html
+++ b/index.html
@@ -76,15 +76,11 @@
 
                   <h1>Robinsons</h1>
 
-                  <div class="videobg">
-                    <div class="videobg-width">
-                      <div class="videobg-aspect">
+                      <!-- <div class="videobg-aspect">
                         <video id="myVideo" autoplay playsinline muted loop poster preload="auto">
                           <source src="images/Robinsons-field-drone.mp4" type="video/mp4">
                         </video>
-                      </div>
-                    </div>
-                  </div>
+                      </div> -->
 
                 </section>
 
