--- a/index.html
+++ b/index.html
@@ -73,15 +73,11 @@
           <main id="main" class="home" role="main">
 
                 <section id="logo" class="row center">
-
                   <h1>Robinsons</h1>
 
-                      <!-- <div class="videobg-aspect">
-                        <video id="myVideo" autoplay playsinline muted loop poster preload="auto">
-                          <source src="images/Robinsons-field-drone.mp4" type="video/mp4">
-                        </video>
-                      </div> -->
-
+                  <!-- <div>
+                    <video src="images/" type="video/mp4"></video>
+                  </div> -->
                 </section>
 
                 <section id="tagline" class="row center blockquote inner-width">
@@ -334,6 +330,5 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="js/main-min.js"></script>
-
 </body>
 </html>
