add: video with hero text mobile and desktop

--- a/index.html
+++ b/index.html
@@ -73,11 +73,13 @@
           <main id="main" class="home" role="main">
 
                 <section id="logo" class="row center">
-                  <h1>Robinsons</h1>
+                  <div class="hero-text">
+                    <h1>Robinsons</h1>
+                  </div>
 
-                  <!-- <div>
-                    <video src="images/" type="video/mp4"></video>
-                  </div> -->
+                  <div class="full-screen-video">
+                    <video src="images/robinsons-drone-field.mp4" type="video/mp4" autoplay playsinline muted loop poster preload="auto"></video>
+                  </div>
                 </section>
 
                 <section id="tagline" class="row center blockquote inner-width">
