add: button for newsletter pop up. fonts

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                   <div class="inner-width">
                     <p>Receive updates about news and prodcuts direct to your inbox.</p>
                     <p class="italic">
-                      Subscribe to our Newsletter <a href="">here</a>.
+                      Subscribe to our Newsletter <span class="newsletter-button">here</span>.
                     </p>
                   </div>
                 </section>
