--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
           <header>
             <nav id="nav" class="inner-width" role="navigation" aria-labelledby="Main Navigation" aria-label="Main Navigation">
               <ul id="navlist" role="menubar">
+                <li id="menuMobileToggle" role="menu mobile toggle" class="mobile-links">
+                  Menu
+                </li>
                 <li role="menuitem" class="internal-links">
                   <a href="careers.html">Careers</a>
                 </li>
@@ -36,6 +39,9 @@
                 </li>
                 <li role="menuitem" class="social-links">
                   <a href="https://www.instagram.com/robinsonscannabis/" target="_blank">Instagram</a>
+                </li>
+                <li role="menuitem" id="cart">
+                  <a href="shop.html" class="mobile-links">Cart</a>
                 </li>
               </ul>
             </nav>
@@ -65,6 +71,37 @@
                   </p>
                   <img class="overlay-close" src="images/SVG/ex.svg" alt="">
               </form>
+            </div>
+
+            <div id="mobileMenu" class="row center closed">
+              <nav>
+                <ul>
+                  <li>
+                    <a href="">Careers</a>
+                  </li>
+                  <li>
+                    <a href="">Shop</a>
+                  </li>
+                  <li>
+                    <a href="">Contact</a>
+                  </li>
+                  <li>
+                    <a href="">Newsletter</a>
+                  </li>
+                  <li>
+                    <a href="">Instagram</a>
+                  </li>
+                  <li>
+                    <a href="">Twitter</a>
+                  </li>
+                  <li>
+                    <a href="">Facebook</a>
+                  </li>
+                  <li class="overlay-close">
+                    <img src="images/SVG/ex-white.svg" alt="">
+                  </li>
+                </ul>
+              </nav>
             </div>
 
           </header>
