--- a/privacy.html
+++ b/privacy.html
@@ -13,6 +13,9 @@
           <header>
             <nav id="nav" class="inner-width" role="navigation" aria-labelledby="Main Navigation" aria-label="Main Navigation">
               <ul id="navlist" role="menubar">
+                <li id="menuMobileToggle" role="menu mobile toggle" class="mobile-links">
+                  Menu
+                </li>
                 <li role="menuitem" class="internal-links">
                   <a href="careers.html">Careers</a>
                 </li>
@@ -37,8 +40,12 @@
                 <li role="menuitem" class="social-links">
                   <a href="https://www.instagram.com/robinsonscannabis/" target="_blank">Instagram</a>
                 </li>
+                <li role="menuitem" id="cart">
+                  <a href="shop.html" class="mobile-links">Cart</a>
+                </li>
               </ul>
             </nav>
+
 
             <div id="overlay" class="row center">
               <form id="newsletter" action="">
@@ -65,6 +72,37 @@
                   </p>
                   <img class="overlay-close" src="images/SVG/ex.svg" alt="">
               </form>
+            </div>
+
+            <div id="mobileMenu" class="row center closed">
+              <nav>
+                <ul>
+                  <li>
+                    <a href="">Careers</a>
+                  </li>
+                  <li>
+                    <a href="">Shop</a>
+                  </li>
+                  <li>
+                    <a href="">Contact</a>
+                  </li>
+                  <li>
+                    <a href="">Newsletter</a>
+                  </li>
+                  <li>
+                    <a href="">Instagram</a>
+                  </li>
+                  <li>
+                    <a href="">Twitter</a>
+                  </li>
+                  <li>
+                    <a href="">Facebook</a>
+                  </li>
+                  <li class="overlay-close">
+                    <img src="images/SVG/ex-white.svg" alt="">
+                  </li>
+                </ul>
+              </nav>
             </div>
 
           </header>
@@ -175,7 +213,7 @@
                     </p>
                     <p>
                       For example, we may use Google’s Universal Analytics to better understand who is using our website and how people are using it. Google may use cookies, pixel tags and other technologies to collect and store information such as website pages visited, places where users click, time spent on each website page, IP address, type of operating system used, location-based data, device ID, search history, and phone number. We use this information to improve our website and as otherwise described in this Privacy Policy. Please see
-                      http://www.google.com/policies/privacy/partners/ for information about how Google Analytics uses this information, visit https://tools.google.com/dlpage/gaoptout for information about the Google Analytics Opt-out Browser Add-on, and visit 
+                      http://www.google.com/policies/privacy/partners/ for information about how Google Analytics uses this information, visit https://tools.google.com/dlpage/gaoptout for information about the Google Analytics Opt-out Browser Add-on, and visit
                       http://www.google.com/settings/ads to adjust the settings for your Google account.
                     </p>
                   </div>
