update: footer mobile styles. wip: footer desktop styles

--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                           $30/GRAM
                       </p>
                     </div>
-                    <div class="product column _25">
-                      <img src="images/black-glass-jar.jpeg" alt="">
+                    <div class="product column _25 mobile-bordertop">
+                      <img class="mobile-display-none" src="images/black-glass-jar.jpeg" alt="">
                       <p class="title">Fire O.G. Kush</p>
                       <p class="description">
                         Morbi aliquam ut erat nec congue. Praesent id eleifend tellus. Morbi commodo, metus at facilisis porta, leo arcu gravida lacus, sede aliquam massa nunc nec arcu.
@@ -180,8 +180,8 @@
                           $30/GRAM
                       </p>
                     </div>
-                    <div class="product column _25">
-                      <img src="images/black-glass-jar.jpeg" alt="">
+                    <div class="product column _25 mobile-bordertop">
+                      <img class="mobile-display-none" src="images/black-glass-jar.jpeg" alt="">
                       <p class="title">Fire O.G. Kush</p>
                       <p class="description">
                         Morbi aliquam ut erat nec congue. Praesent id eleifend tellus. Morbi commodo, metus at facilisis porta, leo arcu gravida lacus, sede aliquam massa nunc nec arcu.
@@ -193,8 +193,8 @@
                           $30/GRAM
                       </p>
                     </div>
-                    <div class="product column _25">
-                      <img src="images/black-glass-jar.jpeg" alt="">
+                    <div class="product column _25 mobile-bordertop">
+                      <img class="mobile-display-none" src="images/black-glass-jar.jpeg" alt="">
                       <p class="title">Fire O.G. Kush</p>
                       <p class="description">
                         Morbi aliquam ut erat nec congue. Praesent id eleifend tellus. Morbi commodo, metus at facilisis porta, leo arcu gravida lacus, sede aliquam massa nunc nec arcu.
@@ -324,11 +324,7 @@
                       <ul class="row">
                         <li class="column">
                           <a class="small-caps" href="terms.html">Terms and Conditions</a>
-                        </li>
-                        <li class="column">
                           /
-                        </li>
-                        <li class="column">
                           <a class="small-caps" href="privacy.html">Privacy Policy</a>
                         </li>
                       </ul>
@@ -352,8 +348,6 @@
                         <li class="column">
                           <span>Photography</span>
                           <a href="https://www.jimrycephoto.com/" target="_blank">Jim Ryce</a>
-                        </li>
-                        <li class="column">
                           <span>Video</span>
                           <a href="#" target="_blank">Eddy El-Diri</a>
                         </li>
