update: three-image order on mobile update: footer mobile and desktop compelte

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     </h3>
                 </section>
 
-                <section id="imgs1">
+                <section class="three-images">
                   <img src="images/cropped/Robinsons_Image_1.jpg" alt="">
                   <div class="row">
                     <div class="column">
@@ -151,60 +151,68 @@
                   </div>
                 </section>
 
-                <section id="products" class="product-grid inner-width">
+                <section id="products" class="product-grid inner-width-desktop">
                   <h2>Products</h2>
                   <div class="row">
                     <div class="product column _25">
-                      <img src="images/black-glass-jar.jpeg" alt="">
-                      <p class="title">Fire O.G. Kush</p>
-                      <p class="description">
-                        Morbi aliquam ut erat nec congue. Praesent id eleifend tellus. Morbi commodo, metus at facilisis porta, leo arcu gravida lacus, sede aliquam massa nunc nec arcu.
-                      </p>
-                      <p class="small">
-                          70% (Sativa)
-                      </p>
-                      <p class="small">
-                          $30/GRAM
-                      </p>
+                      <div class="inner-width-mobile">
+                          <img src="images/black-glass-jar.jpeg" alt="">
+                          <p class="title">Fire O.G. Kush</p>
+                          <p class="description">
+                            Morbi aliquam ut erat nec congue. Praesent id eleifend tellus. Morbi commodo, metus at facilisis porta, leo arcu gravida lacus, sede aliquam massa nunc nec arcu.
+                          </p>
+                          <p class="small">
+                              70% (Sativa)
+                          </p>
+                          <p class="small">
+                              $30/GRAM
+                          </p>
+                      </div>
                     </div>
                     <div class="product column _25 mobile-bordertop">
-                      <img class="mobile-display-none" src="images/black-glass-jar.jpeg" alt="">
-                      <p class="title">Fire O.G. Kush</p>
-                      <p class="description">
-                        Morbi aliquam ut erat nec congue. Praesent id eleifend tellus. Morbi commodo, metus at facilisis porta, leo arcu gravida lacus, sede aliquam massa nunc nec arcu.
-                      </p>
-                      <p class="small">
-                          70% (Sativa)
-                      </p>
-                      <p class="small">
-                          $30/GRAM
-                      </p>
+                      <div class="inner-width-mobile">
+                        <img class="mobile-display-none" src="images/black-glass-jar.jpeg" alt="">
+                        <p class="title">Fire O.G. Kush</p>
+                        <p class="description">
+                          Morbi aliquam ut erat nec congue. Praesent id eleifend tellus. Morbi commodo, metus at facilisis porta, leo arcu gravida lacus, sede aliquam massa nunc nec arcu.
+                        </p>
+                        <p class="small">
+                            70% (Sativa)
+                        </p>
+                        <p class="small">
+                            $30/GRAM
+                        </p>
+                      </div>
                     </div>
                     <div class="product column _25 mobile-bordertop">
-                      <img class="mobile-display-none" src="images/black-glass-jar.jpeg" alt="">
-                      <p class="title">Fire O.G. Kush</p>
-                      <p class="description">
-                        Morbi aliquam ut erat nec congue. Praesent id eleifend tellus. Morbi commodo, metus at facilisis porta, leo arcu gravida lacus, sede aliquam massa nunc nec arcu.
-                      </p>
-                      <p class="small">
-                          70% (Sativa)
-                      </p>
-                      <p class="small">
-                          $30/GRAM
-                      </p>
+                      <div class="inner-width-mobile">
+                        <img class="mobile-display-none" src="images/black-glass-jar.jpeg" alt="">
+                        <p class="title">Fire O.G. Kush</p>
+                        <p class="description">
+                          Morbi aliquam ut erat nec congue. Praesent id eleifend tellus. Morbi commodo, metus at facilisis porta, leo arcu gravida lacus, sede aliquam massa nunc nec arcu.
+                        </p>
+                        <p class="small">
+                            70% (Sativa)
+                        </p>
+                        <p class="small">
+                            $30/GRAM
+                        </p>
+                      </div>
                     </div>
                     <div class="product column _25 mobile-bordertop">
-                      <img class="mobile-display-none" src="images/black-glass-jar.jpeg" alt="">
-                      <p class="title">Fire O.G. Kush</p>
-                      <p class="description">
-                        Morbi aliquam ut erat nec congue. Praesent id eleifend tellus. Morbi commodo, metus at facilisis porta, leo arcu gravida lacus, sede aliquam massa nunc nec arcu.
-                      </p>
-                      <p class="small">
-                          70% (Sativa)
-                      </p>
-                      <p class="small">
-                          $30/GRAM
-                      </p>
+                      <div class="inner-width-mobile">
+                          <img class="mobile-display-none" src="images/black-glass-jar.jpeg" alt="">
+                          <p class="title">Fire O.G. Kush</p>
+                          <p class="description">
+                            Morbi aliquam ut erat nec congue. Praesent id eleifend tellus. Morbi commodo, metus at facilisis porta, leo arcu gravida lacus, sede aliquam massa nunc nec arcu.
+                          </p>
+                          <p class="small">
+                              70% (Sativa)
+                          </p>
+                          <p class="small">
+                              $30/GRAM
+                          </p>
+                      </div>
                     </div>
                   </div>
                 </section>
@@ -239,7 +247,7 @@
                   </div>
                 </section>
 
-                <section id="imgs2">
+                <section class="three-images">
                   <div class="row">
                     <div class="column">
                       <img src="images/cropped/Robinsons_Image_4b.jpg" alt="">
@@ -251,52 +259,60 @@
                   <img src="images/cropped/Robinsons_Image_6.jpg" alt="">
                 </section>
 
-                <section id="pressNews" class="blog-grid">
+                <section id="pressNews" class="blog-grid inner-width-desktop">
                     <h2>Press and News</h2>
-                    <div class="row inner-width">
-                      <div class="article-preview column _25">
-                        <p class="title">
-                          Cannabis Wheaton to Acquire Robinson's
-                        </p>
-                        <p class="date">
-                          <span class="italic">Press Release</span>, 04.04.2018
-                        </p>
-                        <p class="preview">
-                          Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. Read More
-                        </p>
+                    <div class="row">
+                      <div class="article-preview column _25 mobile-borderbottom">
+                        <div class="inner-width-mobile">
+                          <p class="title">
+                            Cannabis Wheaton to Acquire Robinson's
+                          </p>
+                          <p class="date">
+                            <span class="italic">Press Release</span>, 04.04.2018
+                          </p>
+                          <p class="preview">
+                            Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. Read More
+                          </p>
+                        </div>
+                      </div>
+                      <div class="article-preview column _25 mobile-borderbottom">
+                        <div class="inner-width-mobile">
+                          <p class="title">
+                            Cannabis Wheaton to Acquire Robinson's
+                          </p>
+                          <p class="date">
+                            <span class="italic">Press Release</span>, 04.04.2018
+                          </p>
+                          <p class="preview">
+                            Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. Read More
+                          </p>
+                        </div>
+                      </div>
+                      <div class="article-preview column _25 mobile-borderbottom">
+                        <div class="inner-width-mobile">
+                          <p class="title">
+                            Cannabis Wheaton to Acquire Robinson's
+                          </p>
+                          <p class="date">
+                            <span class="italic">Press Release</span>, 04.04.2018
+                          </p>
+                          <p class="preview">
+                            Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. Read More
+                          </p>
+                        </div>
                       </div>
                       <div class="article-preview column _25">
-                        <p class="title">
-                          Cannabis Wheaton to Acquire Robinson's
-                        </p>
-                        <p class="date">
-                          <span class="italic">Press Release</span>, 04.04.2018
-                        </p>
-                        <p class="preview">
-                          Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. Read More
-                        </p>
-                      </div>
-                      <div class="article-preview column _25">
-                        <p class="title">
-                          Cannabis Wheaton to Acquire Robinson's
-                        </p>
-                        <p class="date">
-                          <span class="italic">Press Release</span>, 04.04.2018
-                        </p>
-                        <p class="preview">
-                          Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. Read More
-                        </p>
-                      </div>
-                      <div class="article-preview column _25">
-                        <p class="title">
-                          Cannabis Wheaton to Acquire Robinson's
-                        </p>
-                        <p class="date">
-                          <span class="italic">Press Release</span>, 04.04.2018
-                        </p>
-                        <p class="preview">
-                          Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. Read More
-                        </p>
+                        <div class="inner-width-mobile">
+                            <p class="title">
+                              Cannabis Wheaton to Acquire Robinson's
+                            </p>
+                            <p class="date">
+                              <span class="italic">Press Release</span>, 04.04.2018
+                            </p>
+                            <p class="preview">
+                              Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. Read More
+                            </p>
+                        </div>
                       </div>
                     </div>
                 </section>
@@ -321,14 +337,14 @@
                 </div>
 
                 <div id="contentinfo" class="inner-width">
-                      <ul class="row">
+                      <ul id="internal-links" class="row">
                         <li class="column">
                           <a class="small-caps" href="terms.html">Terms and Conditions</a>
                           /
                           <a class="small-caps" href="privacy.html">Privacy Policy</a>
                         </li>
                       </ul>
-                      <ul id="contact" class="row">
+                      <ul id="contact" class="row mobile-flex-column">
                         <li class="column">
                           <span>Address</span>
                           <a href="https://www.google.com/maps/place/Rockwell+Dr,+Kentville,+NS+B4N+3V7/@45.061756,-64.6155493,12z/data=!4m5!3m4!1s0x4b5850bfda789717:0xbfc5ecad0d3354ac!8m2!3d45.0618559!4d-64.5455166" target="_blank">
@@ -344,7 +360,7 @@
                           <a href="tel:+19029861864">1 (902) 986 1864</a>
                         </li>
                       </ul>
-                      <ul id="copyright" class="row">
+                      <ul id="copyright" class="row mobile-flex-column ">
                         <li class="column">
                           <span>Photography</span>
                           <a href="https://www.jimrycephoto.com/" target="_blank">Jim Ryce</a>
