update: mobile imgs on homepage

--- a/index.html
+++ b/index.html
@@ -77,25 +77,25 @@
               <nav>
                 <ul>
                   <li>
-                    <a href="">Careers</a>
+                    <a href="careers.html">Careers</a>
                   </li>
                   <li>
-                    <a href="">Shop</a>
+                    <a href="shop.html">Shop</a>
                   </li>
                   <li>
-                    <a href="">Contact</a>
+                    <a href="contact.html">Contact</a>
+                  </li>
+                  <li id="newsletterNavButton">
+                    Newsletter
                   </li>
                   <li>
-                    <a href="">Newsletter</a>
+                    <a href="https://www.instagram.com/robinsonscannabis/">Instagram</a>
                   </li>
                   <li>
-                    <a href="">Instagram</a>
+                    <a href="https://twitter.com/robinsonscanna?lang=en">Twitter</a>
                   </li>
                   <li>
-                    <a href="">Twitter</a>
-                  </li>
-                  <li>
-                    <a href="">Facebook</a>
+                    <a href="https://www.instagram.com/robinsonscannabis/">Facebook</a>
                   </li>
                   <li class="overlay-close">
                     <img src="images/SVG/ex-white.svg" alt="">
@@ -131,13 +131,16 @@
                 </section>
 
                 <section class="three-images">
-                  <img src="images/cropped/Robinsons_Image_1.jpg" alt="">
+                  <img class="mobile-display-none" src="images/cropped/Robinsons_Image_1.jpg" alt="">
+                  <img class="desktop-display-none" src="images/mobile/mountain-water.jpg" alt="">
                   <div class="row">
                     <div class="column">
-                      <img src="images/cropped/Robinsons_Image_2.jpg" alt="">
+                      <img class="mobile-display-none" src="images/cropped/Robinsons_Image_2.jpg" alt="">
+                      <img class="desktop-display-none" src="images/mobile/lighthouse.jpg" alt="">
                     </div>
                     <div class="column">
-                      <img src="images/cropped/Robinsons_Image_3b.jpg" alt="">
+                      <img class="mobile-display-none" src="images/cropped/Robinsons_Image_3b.jpg" alt="">
+                      <img class="desktop-display-none img-white-border" src="images/mobile/andrew-robinson.jpg" alt="">
                     </div>
                   </div>
                 </section>
@@ -250,13 +253,16 @@
                 <section class="three-images">
                   <div class="row">
                     <div class="column">
-                      <img src="images/cropped/Robinsons_Image_4b.jpg" alt="">
+                      <img class="mobile-display-none" src="images/cropped/Robinsons_Image_4b.jpg" alt="">
+                      <img class="desktop-display-none img-white-border" src="images/mobile/barn-in-field.jpg" alt="">
                     </div>
                     <div class="column">
-                      <img src="images/cropped/Robinsons_Image_5.jpg" alt="">
+                      <img class="mobile-display-none" src="images/cropped/Robinsons_Image_5.jpg" alt="">
+                      <img class="desktop-display-none" src="images/mobile/hay-in-field.jpg" alt="">
                     </div>
                   </div>
-                  <img src="images/cropped/Robinsons_Image_6.jpg" alt="">
+                  <img class="mobile-display-none" src="images/cropped/Robinsons_Image_6.jpg" alt="">
+                  <img class="desktop-display-none" src="images/mobile/river-with-grass.jpg" alt="">
                 </section>
 
                 <section id="pressNews" class="blog-grid inner-width-desktop">
