update: nav preent on all pages

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li role="menuitem" class="internal-links">
                   <a href="contact.html">Contact</a>
                 </li>
-                <li id="newsletterNavButton" role="menuitem" class="internal-links">
+                <li role="menuitem" class="internal-links newsletterNavButton">
                   Newsletter
                 </li>
                 <li role="menuitem" id="home-button">
@@ -85,7 +85,7 @@
                   <li>
                     <a href="contact.html">Contact</a>
                   </li>
-                  <li id="newsletterNavButton">
+                  <li id="mobileNewsletterNavButton">
                     Newsletter
                   </li>
                   <li>
