--- a/terms.html
+++ b/terms.html
@@ -10,102 +10,101 @@
 
     <div id="wrapper">
 
-          <header>
-            <nav id="nav" class="inner-width" role="navigation" aria-labelledby="Main Navigation" aria-label="Main Navigation">
-              <ul id="navlist" role="menubar">
-                <li id="menuMobileToggle" role="menu mobile toggle" class="mobile-links">
-                  Menu
-                </li>
-                <li role="menuitem" class="internal-links">
-                  <a href="careers.html">Careers</a>
-                </li>
-                <li role="menuitem" class="internal-links">
-                  <a href="shop.html">Shop</a>
-                </li>
-                <li role="menuitem" class="internal-links">
-                  <a href="contact.html">Contact</a>
-                </li>
-                <li id="newsletterNavButton" role="menuitem" class="internal-links">
-                  Newsletter
-                </li>
-                <li role="menuitem" id="home-button">
-                  <a href="index.html">robinsons cannabis</a>
-                </li>
-                <li role="menuitem" class="social-links">
-                  <a href="https://www.instagram.com/robinsonscannabis/" target="_blank">Facebook</a>
-                </li>
-                <li role="menuitem" class="social-links">
-                  <a href="https://twitter.com/robinsonscanna?lang=en" target="_blank">Twitter</a>
-                </li>
-                <li role="menuitem" class="social-links">
-                  <a href="https://www.instagram.com/robinsonscannabis/" target="_blank">Instagram</a>
-                </li>
-                <li role="menuitem" id="cart">
-                  <a href="shop.html" class="mobile-links">Cart</a>
-                </li>
-              </ul>
-            </nav>
+      <header>
+        <nav id="nav" class="inner-width" role="navigation" aria-labelledby="Main Navigation" aria-label="Main Navigation">
+          <ul id="navlist" role="menubar">
+            <li id="menuMobileToggle" role="menu mobile toggle" class="mobile-links">
+              Menu
+            </li>
+            <li role="menuitem" class="internal-links">
+              <a href="careers.html">Careers</a>
+            </li>
+            <li role="menuitem" class="internal-links">
+              <a href="shop.html">Shop</a>
+            </li>
+            <li role="menuitem" class="internal-links">
+              <a href="contact.html">Contact</a>
+            </li>
+            <li id="newsletterNavButton" role="menuitem" class="internal-links">
+              Newsletter
+            </li>
+            <li role="menuitem" id="home-button">
+              <a href="index.html">robinsons cannabis</a>
+            </li>
+            <li role="menuitem" class="social-links">
+              <a href="https://www.instagram.com/robinsonscannabis/" target="_blank">Facebook</a>
+            </li>
+            <li role="menuitem" class="social-links">
+              <a href="https://twitter.com/robinsonscanna?lang=en" target="_blank">Twitter</a>
+            </li>
+            <li role="menuitem" class="social-links">
+              <a href="https://www.instagram.com/robinsonscannabis/" target="_blank">Instagram</a>
+            </li>
+            <li role="menuitem" id="cart">
+              <a href="shop.html" class="mobile-links">Cart</a>
+            </li>
+          </ul>
+        </nav>
 
+        <div id="overlay" class="row center">
+          <form id="newsletter" action="">
+              <p class="title">
+                Robinsons Newsletter
+              </p>
+              <div class="label-wrap">
+                <label for="fullName">
+                  <input id="fullName" type="text" name="s_fullname" aria-label="First and last names" aria-required="true">
+                  Name
+                </label>
+              </div>
+              <div class="label-wrap">
+                <label for="email">
+                  <input id="email" type="text" name="s_email" aria-label="Email address" aria-required="true">
+                  Email Address
+                </label>
+              </div>
+              <input type="submit" id="s_enter" value="Subscribe">
+              <p class="description">
+                By submitting your information, you are agreeing to receive email from us, including newsletters, reports, press releases, and invitations
+                to special events. You can unsubscribe and withdraw your consent at
+                any time by contacting us.
+              </p>
+              <img class="overlay-close" src="images/SVG/ex.svg" alt="">
+          </form>
+        </div>
 
-            <div id="overlay" class="row center">
-              <form id="newsletter" action="">
-                  <p class="title">
-                    Robinsons Newsletter
-                  </p>
-                  <div class="label-wrap">
-                    <label for="fullName">
-                      <input id="fullName" type="text" name="s_fullname" aria-label="First and last names" aria-required="true">
-                      Name
-                    </label>
-                  </div>
-                  <div class="label-wrap">
-                    <label for="email">
-                      <input id="email" type="text" name="s_email" aria-label="Email address" aria-required="true">
-                      Email Address
-                    </label>
-                  </div>
-                  <input type="submit" id="s_enter" value="Subscribe">
-                  <p class="description">
-                    By submitting your information, you are agreeing to receive email from us, including newsletters, reports, press releases, and invitations
-                    to special events. You can unsubscribe and withdraw your consent at
-                    any time by contacting us.
-                  </p>
-                  <img class="overlay-close" src="images/SVG/ex.svg" alt="">
-              </form>
-            </div>
+        <div id="mobileMenu" class="row center closed">
+          <nav>
+            <ul>
+              <li>
+                <a href="careers.html">Careers</a>
+              </li>
+              <li>
+                <a href="shop.html">Shop</a>
+              </li>
+              <li>
+                <a href="contact.html">Contact</a>
+              </li>
+              <li>
+                Newsletter
+              </li>
+              <li>
+                <a href="https://www.instagram.com/robinsonscannabis/">Instagram</a>
+              </li>
+              <li>
+                <a href="https://twitter.com/robinsonscanna?lang=en">Twitter</a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/robinsonscannabis/">Facebook</a>
+              </li>
+              <li class="overlay-close">
+                <img src="images/SVG/ex-white.svg" alt="">
+              </li>
+            </ul>
+          </nav>
+        </div>
 
-            <div id="mobileMenu" class="row center closed">
-              <nav>
-                <ul>
-                  <li>
-                    <a href="">Careers</a>
-                  </li>
-                  <li>
-                    <a href="">Shop</a>
-                  </li>
-                  <li>
-                    <a href="">Contact</a>
-                  </li>
-                  <li>
-                    <a href="">Newsletter</a>
-                  </li>
-                  <li>
-                    <a href="">Instagram</a>
-                  </li>
-                  <li>
-                    <a href="">Twitter</a>
-                  </li>
-                  <li>
-                    <a href="">Facebook</a>
-                  </li>
-                  <li class="overlay-close">
-                    <img src="images/SVG/ex-white.svg" alt="">
-                  </li>
-                </ul>
-              </nav>
-            </div>
-
-          </header>
+      </header>
 
 
           <main id="main" class="terms" role="main">
@@ -291,18 +290,14 @@
                 </div>
 
                 <div id="contentinfo" class="inner-width">
-                      <ul class="row">
+                      <ul id="internal-links" class="row">
                         <li class="column">
                           <a class="small-caps" href="terms.html">Terms and Conditions</a>
-                        </li>
-                        <li class="column">
                           /
-                        </li>
-                        <li class="column">
                           <a class="small-caps" href="privacy.html">Privacy Policy</a>
                         </li>
                       </ul>
-                      <ul id="contact" class="row">
+                      <ul id="contact" class="row mobile-flex-column">
                         <li class="column">
                           <span>Address</span>
                           <a href="https://www.google.com/maps/place/Rockwell+Dr,+Kentville,+NS+B4N+3V7/@45.061756,-64.6155493,12z/data=!4m5!3m4!1s0x4b5850bfda789717:0xbfc5ecad0d3354ac!8m2!3d45.0618559!4d-64.5455166" target="_blank">
@@ -318,12 +313,10 @@
                           <a href="tel:+19029861864">1 (902) 986 1864</a>
                         </li>
                       </ul>
-                      <ul id="copyright" class="row">
+                      <ul id="copyright" class="row mobile-flex-column ">
                         <li class="column">
                           <span>Photography</span>
                           <a href="https://www.jimrycephoto.com/" target="_blank">Jim Ryce</a>
-                        </li>
-                        <li class="column">
                           <span>Video</span>
                           <a href="#" target="_blank">Eddy El-Diri</a>
                         </li>
