update: newsletter mobile toggle working

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               </ul>
             </nav>
 
-            <div id="overlay" class="row center">
+            <div id="overlay" class="row center closed">
               <form id="newsletter" action="">
                   <p class="title">
                     Robinsons Newsletter
