add: nav with mobile newsletter toggle to all pages

--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
             <li role="menuitem" class="internal-links">
               <a href="contact.html">Contact</a>
             </li>
-            <li id="newsletterNavButton" role="menuitem" class="internal-links">
+            <li role="menuitem" class="internal-links newsletterNavButton">
               Newsletter
             </li>
             <li role="menuitem" id="home-button">
@@ -46,7 +46,7 @@
           </ul>
         </nav>
 
-        <div id="overlay" class="row center">
+        <div id="overlay" class="row center closed">
           <form id="newsletter" action="">
               <p class="title">
                 Robinsons Newsletter
@@ -85,7 +85,7 @@
               <li>
                 <a href="contact.html">Contact</a>
               </li>
-              <li>
+              <li id="mobileNewsletterNavButton">
                 Newsletter
               </li>
               <li>
