update: careers mobile styles

--- a/careers.html
+++ b/careers.html
@@ -125,14 +125,14 @@
                 </div>
               </section>
 
-              <section id="jobs" class="inner-width">
+              <section id="jobs" class="inner-width-desktop">
                 <div class="row job">
-                    <div class="column _25">
+                    <div class="column _25 inner-width-mobile">
                       <p class="title small-caps">
                         Future Opportunities
                       </p>
                     </div>
-                    <div class="column _75">
+                    <div class="column _75 inner-width-mobile">
                       <p>
                         We’re always looking for talented individuals to join our team. Don’t see an opening
                         currently? Feel free to email us your cover letter and resume and let us know why you’d make a great fit.
@@ -140,13 +140,13 @@
                     </div>
                 </div>
                 <div class="row job">
-                    <div class="column _25">
+                    <div class="column _25 inner-width-mobile">
                       <p class="title small-caps">
                         Executive
                         Administrative Assistant
                       </p>
                     </div>
-                    <div class="column _75">
+                    <div class="column _75 inner-width-mobile">
                       <p>
                         We’re currently seeking an Executive Administrative Assistant to join our growing team on a part-time basis from date of hire until February 3, 2019. As of February 4, 2019, this role will become full-time in nature.
                       </p>
@@ -156,13 +156,13 @@
                     </div>
                 </div>
                 <div class="row job">
-                    <div class="column _25">
+                    <div class="column _25 inner-width-mobile">
                       <p class="title small-caps">
                         Executive
                         Administrative Assistant
                       </p>
                     </div>
-                    <div class="column _75">
+                    <div class="column _75 inner-width-mobile">
                       <p>
                         We’re currently seeking an Executive Administrative Assistant to join our growing team on a part-time basis from date of hire until February 3, 2019. As of February 4, 2019, this role will become full-time in nature.
                       </p>
